create github pages

--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
   <meta name="description" content="Web Page Generator Description">
   
-  <title>Page 1</title>
+  <title>COVID-19</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="cid-rTNisbfU32 mbr-fullscreen mbr-parallax-background" id="header2-g">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="cid-rTNisbfU32 mbr-fullscreen mbr-parallax-background" id="header2-g">
 
     
 
